# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG   = fixed a bug that was (or could have been) crashing

Jul 6, 2001
	added python 1.5.2 compatability

June 25, 2001
	horizontal transform.flip() was reading pixels off by one [BUG]

June 24, 2001
	calling set_mode will change all references to the  display surface


pygame-11
Jun 23, 2001
	removed smooth underline font render protection

Jun 19, 2001
	fixed botched image.save() function

Jun 15, 2001
	new inplace Rect calls: move_ip, union_ip, etc

Jun 11, 2001
	smarter locking with subsurfaces
	added transform.rotozoom(), which uses builtin SDL_rotozoom

May 31, 2001
	correctly handle unicode filenames

May 29, 2001
	set display physical palette with display.set_palette()
	added transform module (with rotate and scale)

May 26, 2001
	code compiles with macos now

May 23, 2001
	fixed line drawing of width 1
	draw.lines() was broken with sections outside clip

May 22, 2001
	added midleft, midright, midtop, and midbottom to Rect
	added Rect.unionall() function to union a list of Rects
	fixed problem in 16bit surfarrays
	new image.tostring() and image.fromstring()

May 20, 2001
	applied dave wallace's patch to fix memory freeing

May 17, 2001
	a few small compile time warning cleanups

May 16, 2001
	line drawing functions now use an optional width

May 15, 2001
	image module is now builtin, but formats are optional
	enhanced save function in image (handles opengl)
	Surface.save is now depracated

May 14, 2001
	smarter internal module handling
	fixed blit() (broken on May 9th change)

May 10, 2001
	USEREVENT events now pass through the queue
	Event() may be called with keyword args and/or a dict
	Font.render() won't render underlines while smoothing [BUG]

May 9, 2001
	8bit subsurfaces inherit their parents colormap
	blit keeps SDL from crashing with alpha onto 8bit

Apr 30, 2001
	loading Sounds from python objects now works [BUG]